--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -36,5 +37,8 @@
     "path": "^0.12.7",
     "prettier": "^2.3.2",
     "validator": "^13.6.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
