Fixed access grant bug

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
     "consistent-return": "off",
     "func-names": "off",
     "object-shorthand": "off",
+    "perfer-destructuring": "off",
     "no-process-exit": "off",
     "no-param-reassign": "off",
     "no-return-await": "off",
